crates/monochange/tests/snapshots/release_notes_and_propagation__app@grouped_default.snap
---
source: crates/monochange/tests/release_notes_and_propagation.rs
expression: app_changelog
---
# Changelog

## 1.1.0 ([DATE])

### Changed

- No package-specific changes were recorded; `workflow-app` was updated to 1.1.0 as part of group `sdk`.
