crates/monochange/tests/snapshots/release_notes_and_propagation__app@ungrouped_caused_by.snap
---
source: crates/monochange/tests/release_notes_and_propagation.rs
expression: app_changelog
---
# Changelog

## app 1.0.1 ([DATE])

### Changed

#### update dependency on core

Bumps the app dependency to consume the latest core API.
