crates/monochange/tests/snapshots/release_notes_and_propagation__custom_empty_update_message_on_package_overrides_default@custom_empty_update_message_on_package_overrides_default.snap
---
source: crates/monochange/tests/release_notes_and_propagation.rs
assertion_line: 111
expression: changelog
---
# Changelog

All notable changes to this project will be documented in this file.

This changelog is managed by [monochange](https://github.com/monochange/monochange).

## 1.1.0 ([DATE])

Grouped release for `sdk`.

### Changed

> [!NOTE]
> *core*

This entry appears in changelog via `group.sdk.changelog.text`

### Features
- **core**: add core feature

> [!NOTE]
> *app*

This entry appears in changelog via `group.sdk.changelog.text`

### Features
- **app**: No changes were recorded for some group members; as a result, package changelogs were synchronized to version 1.1.0.
