crates/monochange/tests/snapshots/release_notes_and_propagation__group@grouped_default.snap
---
source: crates/monochange/tests/release_notes_and_propagation.rs
assertion_line: 51
expression: group_changelog
---
# Changelog

## 1.1.0 ([DATE])

Grouped release for `sdk`.

### Minor

> [!NOTE]
> *core*

#### add core feature
