crates/monochange/tests/snapshots/release_notes_and_propagation__ungrouped_transitive_bump_with_parent_bump_minor_escalates_dependent_version@app_decision.snap
---
source: crates/monochange/tests/release_notes_and_propagation.rs
expression: redacted
---
{
  "bump": "minor",
  "package": "cargo:crates/app/Cargo.toml",
  "plannedVersion": "1.1.0",
  "reasons": [
    "depends on `cargo:crates/core/Cargo.toml`"
  ],
  "trigger": "transitive-dependency",
  "upstreamSources": [
    "cargo:crates/core/Cargo.toml"
  ]
}
